--- a/frontend/src/app/admin/admin-person-list/admin-person-list.component.html
+++ b/frontend/src/app/admin/admin-person-list/admin-person-list.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="isEditModalShown" [config]="{ show: true }" (onHidden)="onEditHidden()" bsModal #editModal="bs-modal"
-     class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+     class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title pull-left">Person bearbeiten</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="hideEditModal()">
-          <span aria-hidden="true">&times;</span>
+          <span>&times;</span>
         </button>
       </div>
       <div class="modal-body">
@@ -16,13 +16,13 @@
 </div>
 
 <div *ngIf="isDeleteModalShown" [config]="{ show: true }" (onHidden)="onDeleteHidden()" bsModal #deleteModal="bs-modal"
-     class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+     class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title pull-left">Wirklich löschen?</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="hideDeleteModal()">
-          <span aria-hidden="true">&times;</span>
+          <span>&times;</span>
         </button>
       </div>
       <div class="modal-body">
