Synchronize model classes in backend and frontend

--- a/frontend/src/app/admin/admin-person-list/admin-person-list.component.html
+++ b/frontend/src/app/admin/admin-person-list/admin-person-list.component.html
@@ -26,7 +26,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>{{personToEdit.first_name}} {{personToEdit.last_name}} wird endgültig gelöscht!</p>
+        <p>{{personToEdit.firstName}} {{personToEdit.lastName}} wird endgültig gelöscht!</p>
 
       </div>
       <div class="modal-footer">
