Show all attributes in person admin table

--- a/frontend/src/app/admin/admin-person-list/admin-person-list.component.html
+++ b/frontend/src/app/admin/admin-person-list/admin-person-list.component.html
@@ -41,12 +41,27 @@
   <div class="row">
     <div class="col-sm-12">
       <table id="personTable" class="table table-bordered" datatable [dtOptions]="dtOptions"
-             [dtTrigger]="dtTrigger">
+             [dtTrigger]="dtTrigger" width="100%">
         <thead>
         <tr>
           <th>Vorname</th>
           <th>Nachname</th>
+          <th>Email</th>
+          <th>Telefon-Nr.</th>
+          <th>Telegram?</th>
+          <th>Sprachen</th>
           <th>Helfer?</th>
+          <th>Erfahrung</th>
+          <th>Nebenfächer</th>
+          <th>Essen</th>
+          <th>Klamotten</th>
+          <th>Auto (TFahrt)</th>
+          <th>Auto (OWoche)</th>
+          <th>Teamerfahrt?</th>
+          <th>KomKurs?</th>
+          <th>Arbeitsgruppen</th>
+          <th>Mitteamer</th>
+          <th>Kommentar</th>
           <th>Button</th>
         </tr>
         </thead>
